# Q21G-referee-whl

./: .env.template  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  authenticate.py  pyproject.toml  setup.py  setup_config.py
demo_data/: Q21_ANSWERS_BATCH.REFEREE_step3_answers.md  Q21_INTERNAL.REFEREE_private_data.md  Q21_ROUND_START.REFEREE_step1_game_setup.md  Q21_SCORE_FEEDBACK.08_player_A_result.md  Q21_SCORE_FEEDBACK.09_player_B_result.md  Q21_WARMUP_CALL.REFEREE_step0_WarmupQuestion.md
docs/: comparison-gmailasreferee-vs-rlgm-gmc.md  prd-rlgm.md
examples/: main.py  my_ai.py  sdk_ai.py  test_local.py
sdk/: __init__.py
tests/: test_abort_handler.py  test_broadcast_router.py  test_callback_executor.py  test_cancel_report.py  test_deadline_integration.py  test_deadline_tracker.py  test_demo_ai.py  test_email_client.py  test_envelope_builder.py  test_format_abort.py  test_game_result.py  test_gmc_deadline.py  test_gmc_single_player.py  test_gmc_wrapper.py  test_gprm.py  test_handler_assignment.py  test_handler_base.py  test_handler_critical_pause.py  test_handler_critical_reset.py  test_handler_end_round.py  test_handler_end_season.py  test_handler_keep_alive.py  test_handler_new_round.py  test_handler_new_round_malfunction.py  test_handler_registration_response.py  test_handler_round_results.py  test_handler_start_season.py  test_handlers_questions.py  test_handlers_scoring.py  test_handlers_warmup.py  test_incoming_validator.py  test_malfunction_detector.py  test_orchestrator.py  test_orchestrator_deadlines.py  test_orchestrator_lifecycle.py  (+24 more)
(+106 files in other folders)
